# LearningDVPA

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: ci.yml
cmake/: macros.cmake
paper/: abstract.tex  algorithms.tex  appendix.tex  examples.tex  intro.tex  macros.tex  main.tex  papers.bib  plot.tex  preliminaries.tex  response.txt  rules.tex  synthesis.tex
results/: exact_eq_analysis.ipynb  probabilistic_eq_analysis.ipynb
results/data/exactEq/: cancellation_increasing_number_of_states.csv  commutation_increasing_number_of_states.csv  idempotency_increasing_number_of_states.csv
results/data/probabilisticEq/: commutation_accuracy.csv
results/src/: Aggregations.py  Plot.py  __init__.py
src/: CMakeLists.txt  Tester.cpp  Tester.hpp  TesterParameters.hpp  main.cpp
src/MainComponent/: input.json
src/benchmark/: BenchmarkRunner.cpp  BenchmarkRunner.hpp  CMakeLists.txt  benchMain.cpp
src/benchmark/scenario/: CMakeLists.txt  Scenario.hpp  Scenarios.hpp
src/benchmark/scenario/increasingNumOfStates/: CMakeLists.txt  IncreasingNumOfStatesAndCalls.cpp  IncreasingNumOfStatesAndCalls.hpp  IncreasingNumOfStatesAndLocals.cpp  IncreasingNumOfStatesAndLocals.hpp  IncreasingNumOfStatesAndReturns.cpp  IncreasingNumOfStatesAndReturns.hpp  IncreasingNumOfStatesAndStackSymbols.cpp  IncreasingNumOfStatesAndStackSymbols.hpp  IncreasingNumOfStatesBase.cpp  IncreasingNumOfStatesBase.hpp  IncreasingNumOfStatesEightCalls.hpp  IncreasingNumOfStatesEightLocals.hpp  IncreasingNumOfStatesEightReturns.hpp  IncreasingNumOfStatesFourCalls.hpp  IncreasingNumOfStatesFourLocals.hpp  IncreasingNumOfStatesFourReturns.hpp  IncreasingNumOfStatesSixCalls.hpp  IncreasingNumOfStatesSixLocals.hpp  IncreasingNumOfStatesSixReturns.hpp  IncreasingNumOfStatesTenCalls.hpp  IncreasingNumOfStatesTenLocals.hpp  IncreasingNumOfStatesTenReturns.hpp
src/benchmark/scenario/srs/: AccuracyScenarioBase.cpp  AccuracyScenarioBase.hpp  BaseSrsScenario.cpp  BaseSrsScenario.hpp  CMakeLists.txt  CancellationAccuracy.cpp  CancellationAccuracy.hpp  CancellationIncreasingNumOfStates.cpp  CancellationIncreasingNumOfStates.hpp  CommutationAccuracy.cpp  CommutationAccuracy.hpp  CommutationIncreasingNumOfStates.cpp  CommutationIncreasingNumOfStates.hpp  IdempotencyAccuracy.cpp  IdempotencyAccuracy.hpp  IdempotencyIncreasingNumOfStates.cpp  IdempotencyIncreasingNumOfStates.hpp
src/common/: CMakeLists.txt  Stack.cpp  Stack.hpp  VPA.cpp  VPA.hpp  Word.cpp  Word.hpp
src/common/symbol/: CallSymbol.hpp  LocalSymbol.hpp  ReturnSymbol.hpp  StackSymbol.hpp  Symbols.hpp
src/common/transition/: Argument.hpp  AutomatonSize.hpp  CMakeLists.txt  CoArgument.hpp  State.hpp  Transition.cpp  Transition.hpp
src/common/transition/ut/: CMakeLists.txt  TestArgument.cpp  TestCoArgument.cpp  TestState.cpp  TestTransition.cpp
src/common/ut/: CMakeLists.txt  TestStack.cpp  TestVPA.cpp
src/generator/: CMakeLists.txt  CdaGenerator.cpp  CdaGenerator.hpp  ECdaGenerator.cpp  ECdaGenerator.hpp  Generator.cpp  Generator.hpp  Generators.hpp  MeVpaGenerator.cpp  MeVpaGenerator.hpp  RandomGenerator.cpp  RandomGenerator.hpp  SeVpaGenerator.cpp  SeVpaGenerator.hpp  Tester.cpp  Tester.hpp  XMLGenerator.cpp  XMLGenerator.hpp  eCDAGenerator.cpp  eCDAGenerator.hpp  kSEVPAGenerator.cpp  kSEVPAGenerator.hpp
src/generator/callDriven/: CMakeLists.txt  CdaGenerator.cpp  CdaGenerator.hpp  ECdaGenerator.cpp  ECdaGenerator.hpp  MeVpaGenerator.cpp  MeVpaGenerator.hpp  SeVpaGenerator.cpp  SeVpaGenerator.hpp
src/generator/srs/: CMakeLists.txt  CancellationGenerator.cpp  CancellationGenerator.hpp  CombinedGenerator.cpp  CombinedGenerator.hpp  CommentsGenerator.cpp  CommentsGenerator.hpp  CommutativeGenerator.cpp  CommutativeGenerator.hpp  IdempotencyGenerator.cpp  IdempotencyGenerator.hpp  XmlGenerator.cpp  XmlGenerator.hpp
src/helper/: CMakeLists.txt  Command.hpp  ExampleRun.cpp  ExampleRun.hpp  InputParser.cpp  InputParser.hpp  PrintHelp.hpp
src/learner/: AutomataGenerator.cpp  AutomataGenerator.hpp  CMakeLists.txt  Calculator.cpp  Calculator.hpp  Learner.cpp  Learner.hpp  Selectors.hpp  Srs.hpp  SrsChecker.cpp  SrsChecker.hpp  TestWords.hpp  UndefinedTransitions.hpp
src/learner/srs/: AutomataConverter.cpp  AutomataConverter.hpp  CMakeLists.txt  ConvertedAutomata.hpp  SpecialSymbolAdder.cpp  SpecialSymbolAdder.hpp  Srs.hpp  (+3 more)
src/mainComponent/: CMakeLists.txt  MainComponent.hpp  main.cpp
src/parser/: Parser.cpp  Parser.hpp
src/parser-obsolete/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/teacher/: AutomataCombiner.cpp  AutomataCombiner.hpp  CMakeLists.txt  Converter.cpp  Converter.hpp  EmptinessChecker.cpp  EmptinessChecker.hpp  EquivalenceCheck.cpp  EquivalenceCheck.hpp  NonTerminal.hpp  ParentStateAndSymbol.hpp  Teacher.cpp  Teacher.hpp  Witness.hpp
src/teacher/ut/: CMakeLists.txt  TestAutomataCombiner.cpp  TestConverter.cpp  TestEmptinessChecker.cpp  TestTeacher.cpp
src/utils/: CMakeLists.txt  Constants.hpp  Counters.cpp  Counters.hpp  EquivalenceCheckConfig.hpp  ExitCode.hpp  TimeMarker.cpp  TimeMarker.hpp  log.hpp
thesis/: activeLearning.tex  algorithm.tex  generators.tex  iithesis.cls  introduction.tex  main.tex  manual.tex  papers.bib  preliminaries.tex  project.tex  results.tex  srs.tex  summary.tex
thesis/plots/: baseMetrics.tex  cancellationSrs.tex  commutationSrs.tex  idempotencySrs.tex
(+51 files in other folders)
